finally Oleksii_Davidenko_CV_EN

--- a/Oleksii_Davidenko_CV_CZ.html
+++ b/Oleksii_Davidenko_CV_CZ.html
@@ -3,54 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oleksii Davidenko - Front-End CV (CZ)</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 40px auto;
-        max-width: 900px;
-        color: #333;
-        background: #f9f9f9;
-        padding: 40px;
-        border-radius: 12px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      h1,
-      h2 {
-        color: #004080;
-      }
-      h1 {
-        text-align: center;
-      }
-      .contact {
-        text-align: center;
-        margin-bottom: 30px;
-      }
-      .section {
-        margin-bottom: 25px;
-      }
-      ul {
-        padding-left: 20px;
-      }
-      li {
-        margin-bottom: 5px;
-      }
-      .title {
-        font-weight: bold;
-        margin-top: 10px;
-      }
-      .subtitle {
-        font-style: italic;
-        color: #555;
-      }
-      .qr {
-        text-align: center;
-        margin-top: 30px;
-      }
-      .qr img {
-        width: 120px;
-      }
-    </style>
+    <title>Oleksii Davidenko – Životopis (CZ)</title>
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <h1>Oleksii Davidenko</h1>
@@ -70,6 +24,7 @@
 
     <div class="section">
       <h2>Pracovní zkušenosti</h2>
+
       <div class="title">SD Industry s.r.o. – Vedoucí obchodního oddělení</div>
       <div class="subtitle">květen 2024 – leden 2025</div>
       <ul>
@@ -78,6 +33,7 @@
         <li>Účast na veletrzích, prezentacích a spolupráce s institucemi</li>
         <li>Řízení krizových situací a certifikace produktů</li>
       </ul>
+
       <div class="title">SD Industry s.r.o. – Obchodník</div>
       <div class="subtitle">září 2023 – duben 2024</div>
       <ul>
@@ -85,6 +41,7 @@
         <li>Řešení reklamací a vyjednávání</li>
         <li>Správa dokumentace</li>
       </ul>
+
       <div class="title">BUDOVA s.r.o. – Realitní manažer</div>
       <div class="subtitle">září 2022 – srpen 2023</div>
       <ul>
@@ -130,9 +87,17 @@
       </ul>
     </div>
 
-    <div class="qr">
-      <p>LinkedIn profil:</p>
-      <img src="Oleksii_Davidenko_LinkedIn_QR.png" alt="LinkedIn QR Code" />
+    <div class="section">
+      <h2>LinkedIn profil:</h2>
+      <img
+        src="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
+        alt="LinkedIn QR Code"
+        class="qr"
+      />
+    </div>
+
+    <div class="buttons">
+      <a href="index.html">← Zpět na výběr jazyka</a>
     </div>
   </body>
 </html>
