--- a/Oleksii_Davidenko_CV_EN.html
+++ b/Oleksii_Davidenko_CV_EN.html
@@ -1,124 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oleksii Davidenko - Front-End CV</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 40px auto;
-      max-width: 900px;
-      color: #333;
-      background: #f9f9f9;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1, h2 {
-      color: #004080;
-    }
-    h1 {
-      text-align: center;
-    }
-    .contact {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .section {
-      margin-bottom: 25px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    li {
-      margin-bottom: 5px;
-    }
-    .title {
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    .subtitle {
-      font-style: italic;
-      color: #555;
-    }
-    .qr {
-      text-align: center;
-      margin-top: 30px;
-    }
-    .qr img {
-      width: 120px;
-    }
-  </style>
-</head>
-<body>
-  <h1>Oleksii Davidenko</h1>
-  <div class="contact">
-    Prague 9 | davidenko.alexey.a@gmail.com | +420 728 038 169
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Oleksii Davidenko – CV (EN)</title>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
+  <body>
+    <h1>Oleksii Davidenko</h1>
+    <div class="contact">
+      Prague 9 | davidenko.alexey.a@gmail.com | +420 728 038 169
+    </div>
 
-  <div class="section">
-    <h2>Career Focus</h2>
-    <p>Junior Front-End Developer (Trainee)</p>
-    <p>Motivated and detail-oriented career switcher with solid experience in sales, team leadership, and communication. Currently transitioning into IT with a strong focus on web technologies.</p>
-  </div>
+    <div class="section">
+      <h2>Career Focus</h2>
+      <p>Junior Front-End Developer (Trainee)</p>
+      <p>
+        Motivated and detail-oriented career switcher with solid experience in
+        sales, team leadership, and communication. Currently transitioning into
+        IT with a strong focus on web technologies.
+      </p>
+    </div>
 
-  <div class="section">
-    <h2>Work Experience</h2>
-    <div class="title">SD Industry s.r.o. - Head of Sales Department</div>
-    <div class="subtitle">May 2024 – January 2025</div>
-    <ul>
-      <li>Led a sales team and managed commercial operations</li>
-      <li>Built relationships with key clients and institutions</li>
-      <li>Participated in trade fairs and handled product certifications</li>
-      <li>Handled crisis situations and team coordination</li>
-    </ul>
-    <div class="title">SD Industry s.r.o. - Sales Specialist</div>
-    <div class="subtitle">September 2023 – April 2024</div>
-    <ul>
-      <li>Active sales and client acquisition</li>
-      <li>Handled documentation and complaints</li>
-      <li>Negotiated with customers and resolved issues</li>
-    </ul>
-    <div class="title">BUDOVA s.r.o. - Real Estate Manager</div>
-    <div class="subtitle">September 2022 – August 2023</div>
-    <ul>
-      <li>Property sales and client consulting</li>
-      <li>Objection handling and follow-up communication</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>Work Experience</h2>
 
-  <div class="section">
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML, CSS, JavaScript, React, Redux</li>
-      <li>Strong communication & teamwork</li>
-      <li>Analytical and organizational skills</li>
-      <li>Client service & negotiation</li>
-      <li>Fast learner, adaptable to new technologies</li>
-    </ul>
-  </div>
+      <div class="title">SD Industry s.r.o. – Head of Sales Department</div>
+      <div class="subtitle">May 2024 – January 2025</div>
+      <ul>
+        <li>Led a sales team and managed commercial operations</li>
+        <li>Built relationships with key clients and institutions</li>
+        <li>Participated in trade fairs and handled product certifications</li>
+        <li>Handled crisis situations and team coordination</li>
+      </ul>
 
-  <div class="section">
-    <h2>Education</h2>
-    <p><strong>Kyiv National University of Technologies and Design (KNUTD)</strong><br>Master’s in Management of Organizations (2010–2015)</p>
-    <p><strong>GoIT – Online Full-Stack Development Course (Front-End Track)</strong><br>Expected graduation: July 2025</p>
-  </div>
+      <div class="title">SD Industry s.r.o. – Sales Specialist</div>
+      <div class="subtitle">September 2023 – April 2024</div>
+      <ul>
+        <li>Active sales and client acquisition</li>
+        <li>Handled documentation and complaints</li>
+        <li>Negotiated with customers and resolved issues</li>
+      </ul>
 
-  <div class="section">
-    <h2>Language Skills</h2>
-    <ul>
-      <li>Ukrainian: Native</li>
-      <li>Russian: Native</li>
-      <li>English: B1</li>
-      <li>German: A1</li>
-      <li>Czech: A1 (currently studying A2, planning B1)</li>
-    </ul>
-  </div>
+      <div class="title">BUDOVA s.r.o. – Real Estate Manager</div>
+      <div class="subtitle">September 2022 – August 2023</div>
+      <ul>
+        <li>Property sales and client consulting</li>
+        <li>Objection handling and follow-up communication</li>
+      </ul>
+    </div>
 
-  <div class="qr">
-    <p>LinkedIn profil:</p>
-    <img src="Oleksii_Davidenko_LinkedIn_QR.png" alt="LinkedIn QR Code">
-  </div>
-</body>
+    <div class="section">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML, CSS, JavaScript, React, Redux</li>
+        <li>Strong communication & teamwork</li>
+        <li>Analytical and organizational skills</li>
+        <li>Client service & negotiation</li>
+        <li>Fast learner, adaptable to new technologies</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Education</h2>
+      <p>
+        <strong
+          >Kyiv National University of Technologies and Design (KNUTD)</strong
+        ><br />Master’s in Management of Organizations (2010–2015)
+      </p>
+      <p>
+        <strong
+          >GoIT – Online Full-Stack Development Course (Front-End Track)</strong
+        ><br />Expected graduation: July 2025
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Language Skills</h2>
+      <ul>
+        <li>Ukrainian: Native</li>
+        <li>Russian: Native</li>
+        <li>English: B1</li>
+        <li>German: A1</li>
+        <li>Czech: A1 (currently studying A2, planning B1)</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>LinkedIn profil:</h2>
+      <img
+        src="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
+        alt="LinkedIn QR Code"
+        class="qr"
+      />
+    </div>
+
+    <div class="buttons">
+      <a href="index.html">← Back to language selection</a>
+    </div>
+  </body>
 </html>
