--- a/index.html
+++ b/index.html
@@ -4,50 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oleksii Davidenko – CV Selection</title>
-    <style>
-      body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        background: linear-gradient(to bottom, #f0f4f8, #dbe9f4);
-        color: #003366;
-      }
-      h1 {
-        font-size: 2.5em;
-        margin-bottom: 10px;
-      }
-      p {
-        font-size: 1.1em;
-        margin-bottom: 30px;
-      }
-      .buttons {
-        display: flex;
-        gap: 20px;
-      }
-      a {
-        text-decoration: none;
-        padding: 12px 24px;
-        background-color: #004080;
-        color: white;
-        border-radius: 8px;
-        font-weight: bold;
-        transition: background-color 0.3s ease;
-      }
-      a:hover {
-        background-color: #0066cc;
-      }
-    </style>
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
+    />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <h1>Welcome to my CV</h1>
-    <p>Please select your language:</p>
-    <div class="buttons">
-      <a href="Oleksii_Davidenko_CV_EN.html">English</a>
-      <a href="Oleksii_Davidenko_CV_CZ.html">Čeština</a>
+    <div class="cv-container">
+      <img
+        src="assets/images/Oleksii_Profile_Photo.png"
+        alt="Oleksii profile photo"
+        class="profile-pic"
+      />
+      <h1>Welcome to my CV</h1>
+      <p class="lang-select">Please select your language:</p>
+      <div class="buttons">
+        <a href="Oleksii_Davidenko_CV_EN.html">English</a>
+        <a href="Oleksii_Davidenko_CV_CZ.html">Čeština</a>
+      </div>
     </div>
   </body>
 </html>
