--- a/Oleksii_Davidenko_CV_CZ.html
+++ b/Oleksii_Davidenko_CV_CZ.html
@@ -87,13 +87,19 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>LinkedIn profil:</h2>
-      <img
-        src="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
-        alt="LinkedIn QR Code"
-        class="qr"
-      />
+    <div class="linkedin-block">
+      <p class="linkedin-label">LinkedIn profil:</p>
+      <a
+        class="linkedin-link"
+        href="https://www.linkedin.com/in/oleksii-davidenko-802b73315"
+        target="_blank"
+      >
+        <img
+          src="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
+          alt="LinkedIn QR"
+          class="qr"
+        />
+      </a>
     </div>
 
     <div class="buttons">
