--- a/Oleksii_Davidenko_CV_EN.html
+++ b/Oleksii_Davidenko_CV_EN.html
@@ -14,7 +14,7 @@
 
     <div class="section">
       <h2>Career Focus</h2>
-      <p>Junior Front-End Developer (Trainee)</p>
+      <p>Front-end developer (junior/trainee)</p>
       <p>
         Motivated and detail-oriented career switcher with solid experience in
         sales, team leadership, and communication. Currently transitioning into
@@ -86,13 +86,19 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>LinkedIn profil:</h2>
-      <img
-        src="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
-        alt="LinkedIn QR Code"
-        class="qr"
-      />
+    <div class="linkedin-block">
+      <p class="linkedin-label">LinkedIn profil:</p>
+      <a
+        class="linkedin-link"
+        href="https://www.linkedin.com/in/oleksii-davidenko-802b73315"
+        target="_blank"
+      >
+        <img
+          src="assets/images/Oleksii_Davidenko_LinkedIn_QR.png"
+          alt="LinkedIn QR"
+          class="qr"
+        />
+      </a>
     </div>
 
     <div class="buttons">
