--- a/Oleksii_Davidenko_CV_EN.html
+++ b/Oleksii_Davidenko_CV_EN.html
@@ -70,7 +70,7 @@
       </p>
       <p>
         <strong
-          >GoIT – Online Full-Stack Development Course (Front-End Track)</strong
+          >GoIT – Online Full-Stack Development Course</strong
         ><br />Expected graduation: July 2025
       </p>
     </div>
