--- a/Oleksii_Davidenko_CV_CZ.html
+++ b/Oleksii_Davidenko_CV_CZ.html
@@ -70,8 +70,7 @@
       </p>
       <p>
         <strong
-          >GoIT – Online kurz Full-Stack Development (Front-end
-          specializace)</strong
+          >GoIT – Online kurz Full-Stack Development </strong
         ><br />Očekávané dokončení: červenec 2025
       </p>
     </div>
