--- a/Oleksii_Davidenko_CV_EN.html
+++ b/Oleksii_Davidenko_CV_EN.html
@@ -50,16 +50,25 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>Skills</h2>
+    <section class="section">
+      <h2>Hard Skills</h2>
       <ul>
         <li>HTML, CSS, JavaScript, React, Redux</li>
-        <li>Strong communication & teamwork</li>
-        <li>Analytical and organizational skills</li>
         <li>Client service & negotiation</li>
-        <li>Fast learner, adaptable to new technologies</li>
+        <li>Analytical and organizational skills</li>
+        <li>Project and process management</li>
       </ul>
-    </div>
+    </section>
+
+    <section class="section">
+      <h2>Soft Skills</h2>
+      <ul>
+        <li>Strong communication & teamwork</li>
+        <li>Adaptability and fast learning</li>
+        <li>Problem-solving mindset</li>
+        <li>Leadership and team coordination</li>
+      </ul>
+    </section>
 
     <div class="section">
       <h2>Education</h2>
