--- a/Oleksii_Davidenko_CV_CZ.html
+++ b/Oleksii_Davidenko_CV_CZ.html
@@ -50,16 +50,22 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>Dovednosti</h2>
-      <ul>
-        <li>HTML, CSS, JavaScript, React, Redux</li>
-        <li>Komunikační schopnosti a týmová spolupráce</li>
-        <li>Analytické a organizační dovednosti</li>
-        <li>Zákaznický servis a vyjednávání</li>
-        <li>Rychlé učení a adaptabilita</li>
-      </ul>
-    </div>
+    <section class="section">
+  <h2>Odborné dovednosti</h2>
+  <ul>
+    <li>HTML, CSS, JavaScript, React, Redux</li>
+    <li>Zákaznický servis a vyjednávání</li>
+    <li>Analytické a organizační dovednosti</li>
+    <li>Řízení projektů a procesů</li>
+  </ul>
+  <h2>Měkké dovednosti</h2>
+  <ul>
+    <li>Komunikační schopnosti a týmová spolupráce</li>
+    <li>Schopnost rychle se učit a přizpůsobovat</li>
+    <li>Řešení problémů</li>
+    <li>Vedení a koordinace týmu</li>
+  </ul>
+</section>
 
     <div class="section">
       <h2>Vzdělání</h2>
